fix: loading indicator is always visible

--- a/css/artwork.css
+++ b/css/artwork.css
@@ -141,6 +141,10 @@ body {
 
 /* modifiers */
 
+.background_unset {
+    background: unset;
+}
+
 .top-100 {
     transform: translateY(0%) !important;
 }
